# a2_rust_utils

./: .gitignore  Cargo.toml  History.md  README.md
src/: file.rs  files.rs  images.rs  job.rs  lib.rs  os.rs  path.rs  rwlock.rs  sqlite.rs  tauri.rs  time.rs
src/display/: size.rs
src/file/: application.rs  domain.rs  infrastratcture.rs  mod.rs  path_ex.rs  path_util.rs  prelude.rs  presentation.rs
src/file/application/: mod.rs  zip_ex.rs  zip_util.rs
src/file/domain/: file_entry.rs  file_info.rs  file_meta.rs  mod.rs  zip_infos.rs
src/file/presentation/: mod.rs
src/hello/: mod.rs
src/hello/presentation/: mod.rs
src/images/: prelude.rs  presentation.rs
src/images/presentation/: mod.rs
src/job/: job_executor.rs  prelude.rs
src/map/: map_err_str.rs  mod.rs
src/path/: mod.rs
src/path/presentation/: mod.rs
src/sqlite/: application.rs  infrastructure.rs  mod.rs
src/sqlite/application/: sample_data.rs
src/sqlite/domain/: sample_data.rs
src/sqlite/infrastructure/: mod.rs  sqlite_gateway.rs
src/tauri/: mod.rs  presentation.rs
src/tauri/presentation/: command.rs  filer.rs  path.rs
