[package]
name = "a2_utils"
version = "0.1.26"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
image = "0.25.8"
once_cell = "1.21.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.8.5"
